@@ -78,6 +78,8 @@ Commands:
 
    new-config                                Manage .new configuration files.
 
+   clean                                     Clean the tmp/ directory from
+                                             downloaded packages and sources.
 Optional arguments:
   -h | --help                                Print this help message and exit.
 
@@ -184,6 +186,7 @@ def usage(repo):
              [health, --silent]
              [deps-status, --tree, --graph=[type]]
              [new-config]
+             [clean]
 
              Optional arguments:
              [-h] [-v]
